snapshots/truth__parse__abi__tests__double_attr.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"unexpected\", r##\"a()()\"##).trim()"
---
error: unexpected '('
  ┌─ <input>:1:4
  │
1 │ a()()
  │    ^
